--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,11 +2,9 @@
 {% if education %}
   {% if site.data.data.sidebar.education %}
   <div class="education-container container-block">
-
     <h2 class="container-block-title">
       Education
     </h2>
-
     {% for graduation in education %}
     <div class="item">
       <h4 class="degree">{{ graduation.degree }}</h4>
@@ -14,11 +12,9 @@
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
     {% endfor %}
-
-  </div><!--//education-container-->
+  </div>
   {% else %}
   <section class="section educations-section">
-
     <h2 class="section-title">
       <span class="fa-stack fa-xs">
         <i class="fas fa-circle fa-stack-2x"></i>
@@ -26,29 +22,22 @@
       </span>
       Education
     </h2>
-
     {% for graduation in education %}
     <div class="item">
-
       <div class="meta">
-
         <div class="upper-row">
           <h3 class="degree">{{ graduation.degree }}</h3>
           <div class="time">{{ graduation.time }}</div>
-        </div><!--//upper-row-->
-
+        </div>
         <div class="university">{{ graduation.university }}</div>
-      </div><!--//meta-->
-
+      </div>
       {% if graduation.details %}
       <div class="details">
         {{ graduation.details | markdownify }}
-      </div><!--//details-->
+      </div>
       {% endif %}
-
-    </div><!--//item-->
+    </div>
     {% endfor %}
-
-  </section><!--//section-->
+  </section>
   {% endif %}
 {% endif %}
