--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,6 @@
 {% assign projects = site.data.data.projects %}
 {% if projects %}
 <section class="section projects-section">
-
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
       <i class="fas fa-circle fa-stack-2x"></i>
@@ -9,16 +8,13 @@
     </span>
     {{ projects.title }}
   </h2>
-
   {% if projects.intro %}
   <div class="intro">
       <p>{{ projects.intro }}</p>
-  </div><!--//intro-->
+  </div>
   {% endif %}
-
   {% for project in projects.assignments %}
     <div class="item">
-
       <span class="project-title">
         {% if project.link %}
         <a href="{{ project.link }}" target="_blank">{{ project.title }}</a>
@@ -26,13 +22,10 @@
         {{ project.title }}
         {% endif %}
       </span>
-
       {% if project.tagline %}
       - <span class="project-tagline">{{ project.tagline }}</span>
       {% endif %}
-
-    </div><!--//item-->
+    </div>
   {% endfor %}
-
-</section><!--//section-->
+</section>
 {% endif %}
