--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,7 +1,6 @@
 {% assign publications = site.data.data.publications %}
 {% if publications %}
 <section class="section publications-section">
-
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
       <i class="fas fa-circle fa-stack-2x"></i>
@@ -9,13 +8,11 @@
     </span>
     {{ publications.title }}
   </h2>
-
   {% if publications.intro %}
   <div class="intro">
     {{ publications.intro | markdownify }}
-  </div><!--//intro-->
+  </div>
   {% endif %}
-
   {% for publication in publications.papers %}
   <div class="item">
     {% if publication.link %}
@@ -25,8 +22,7 @@
     {% endif %}
     <div class="publication-authors">{{ publication.authors }}</div>
     <div class="publication-conference">{{ publication.conference }}</div>
-  </div><!--//item-->
+  </div>
   {% endfor %}
-
-</section><!--//section-->
+</section>
 {% endif %}
