--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -11,7 +11,8 @@
     }
 
     .main-wrapper {
-        padding: 30px;
+        padding: 28px;
+        margin: 0;
     }
 
     .main-wrapper .time {
