--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -8,30 +8,21 @@
     </span>
     Experiences
   </h2>
-
   {% for experience in experiences %}
   <div class="item">
-
     <div class="meta">
-
       <div class="upper-row">
         <h3 class="job-title">{{ experience.role }}</h3>
         <div class="time">{{ experience.time }}</div>
-      </div><!--//upper-row-->
-
+      </div>
       <div class="company">{{ experience.company }}</div>
-
-    </div><!--//meta-->
-
+    </div>
     {% if experience.details %}
     <div class="details">
       {{ experience.details | markdownify }}
-    </div><!--//details-->
+    </div>
     {% endif %}
-
-  </div><!--//item-->
+  </div>
   {% endfor %}
-
-</section><!--//section-->
+</section>
 {% endif %}
-
