--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -15,7 +15,13 @@
         <h3 class="job-title">{{ experience.role }}</h3>
         <div class="time">{{ experience.time }}</div>
       </div>
-      <div class="company">{{ experience.company }}</div>
+      <div class="company">
+        {% if experience.link %}
+        <a href="{{ experience.link }}" target="_blank">{{ experience.company }}</a>
+        {% else %}
+          {{ experience.company }}
+        {% endif %}
+      </div>
     </div>
     {% if experience.details %}
     <div class="details">
