--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6  {
 a {
     color: darken($theme-color, 15%);
     &:hover {
-        text-decoration: underline;
+        text-decoration: none;
         color: darken($theme-color, 30%);
     }
     &:focus {
