--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -171,11 +171,13 @@ p {
         margin-bottom: 60px;
     }
 
-    .experiences-section, .educations-section {
+    .projects-section, .experiences-section, .educations-section {
+        .intro,
         .item {
             margin-bottom: 30px;
         }
     }
+
     .upper-row {
         position: relative;
         overflow: hidden;
@@ -201,24 +203,13 @@ p {
         margin-bottom: 10px;
         color: $text-grey;
     }
-
     .project-title {
         font-size: 16px;
         font-weight: 400;
         margin-top: 0;
         margin-bottom: 5px;
-	color: darken($theme-color, 15%);
+        color: darken($theme-color, 15%);
     }
-
-    .projects-section {
-        .intro {
-            margin-bottom: 30px;
-        }
-        .item {
-            margin-bottom: 15px;
-        }
-    }
-
     .publication-title {
         font-size: 16px;
         font-weight: 400;
