--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,7 +19,7 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
-        <h3 class="job-title">
+        <h3 class="project-title">
           {% if project.link %}
           <a href="{{ project.link }}" target="_blank">{{ project.title }}</a>
           {% else %}
