--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -192,6 +192,14 @@ p {
         font-weight: 500;
     }
 
+    .project-title {
+        color: $text-color;
+        font-size: 16px;
+        margin-top: 0;
+        margin-bottom: 15px;
+        font-weight: 500;
+    }
+
     .time {
         position: absolute;
         right: 0;
