--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,7 +2,7 @@
 {% if profile %}
 <section class="section summary-section">
   <h2 class="section-title">
-    <span class="fa-stack fa-xs">
+    <span class="fa-stack fa-xs no-print">
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-user fa-stack-1x fa-inverse"></i>
     </span>
