--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,7 +2,7 @@
 {% if skills %}
 <section class="section skills-section">
   <h2 class="section-title">
-    <span class="fa-stack fa-xs">
+    <span class="fa-stack fa-xs no-print">
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-cogs fa-stack-1x fa-inverse"></i>
     </span>
