--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,6 +1,6 @@
 {% assign interests = site.data.data.sidebar.interests %}
 {% if interests %}
-<div class="interests-container container-block">
+<div class="interests-container container-block no-print">
   <h2 class="container-block-title">
     Interests
   </h2>
