--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -3,9 +3,17 @@
     @page {
         size: A4;
     }
+
     body {
-       font-size: 12pt;
+       font-size: 10pt;
     }
+
+    .no-print {
+       display: none;
+    }
+   .no-screen {
+      display: inline-block;
+   }
 
     img.avatar {
         filter: grayscale(1);
@@ -19,7 +27,7 @@
     .sidebar-wrapper {
         position: static;
         float: right;
-        width: 25%;
+        width: 30%;
         -webkit-print-color-adjust: exact;
     }
 
