--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -276,6 +276,7 @@ p {
 .footer {
     display: inherit;
     padding-top: 30px;
+    padding-bottom: 30px;
 
     .copyright {
         line-height: 1.6;
