--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,7 +10,7 @@
   </h2>
   {% if skills.summary %}
   <div class="summary">
-    {{ skills.summary | markdownify }}
+    <p>{{ skills.summary | markdownify }}</p>
   </div>
   {% endif %}
   {% if skills.skillset %}
