--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,18 +8,18 @@
     </span>
     {{ projects.title }}
   </h2>
-  {% if projects.intro %}
-  <div class="intro">
-      <p>{{ projects.intro }}</p>
+  {% if projects.summary %}
+  <div class="summary">
+      <p>{{ projects.summary | markdownify }}</p>
   </div>
   {% endif %}
 </section>
-<section class="section experiences-section">
-  {% for project in projects.assignments %}
+<section class="section projects-section">
+  {% for project in projects.project-list %}
   <div class="item">
     <div class="meta">
       <div class="upper-row">
-        <h3 class="project-title">
+        <h3 class="item-title">
           {% if project.link %}
           <a href="{{ project.link }}" target="_blank">{{ project.title }}</a>
           {% else %}
